[package]
name = "arx-faucet"
description = "Arx Testnet utility services"
version = "0.1.0"

# Workspace inherited keys
authors = { workspace = true }
edition = { workspace = true }
homepage = { workspace = true }
license = { workspace = true }
publish = { workspace = true }
repository = { workspace = true }
rust-version = { workspace = true }

[dependencies]
anyhow = { workspace = true }
arx-config = { workspace = true }
arx-crypto = { workspace = true }
arx-protocol-constants = { workspace = true }
arx-keygen = { workspace = true }
arx-logger = { workspace = true }
arx-rest-client = { workspace = true }
arx-sdk = { workspace = true }
arx-webserver = { workspace = true }
bcs = { workspace = true }
bytes = { workspace = true }
clap = { workspace = true }
futures = { workspace = true }
hex = { workspace = true }
rand = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
url = { workspace = true }
warp = { workspace = true }

[dev-dependencies]
arx-config = { workspace = true }
arx-infallible = { workspace = true }
serde_json = { workspace = true }
tempfile = { workspace = true }
