[package]
name = "arx-genesis"
description = "A tool to manage genesis"
version = "0.1.0"

# Workspace inherited keys
authors = { workspace = true }
edition = { workspace = true }
homepage = { workspace = true }
license = { workspace = true }
publish = { workspace = true }
repository = { workspace = true }
rust-version = { workspace = true }

[dependencies]
anyhow = { workspace = true }
arx-cached-packages = { workspace = true }
arx-config = { workspace = true }
arx-crypto = { workspace = true }
arx-db = { workspace = true }
arx-executor = { workspace = true }
arx-framework = { workspace = true }
arx-keygen = { workspace = true }
arx-logger = { workspace = true }
arx-state-view =  { workspace = true }
arx-storage-interface = { workspace = true }
arx-temppath = { workspace = true }
arx-types = { workspace = true }
arx-vm = { workspace = true }
arx-vm-genesis = { workspace = true }
bcs = { workspace = true }
rand = { workspace = true }
serde = { workspace = true }
serde_yaml = { workspace = true }

[dev-dependencies]
arx-config = { workspace = true }

[features]
testing = []
fuzzing = ["arx-config/fuzzing"]
