[package]
name = "arx-indexer"
description = "Arx Indexer"
version = "0.0.1"

# Workspace inherited keys
authors = { workspace = true }
edition = { workspace = true }
homepage = { workspace = true }
license = { workspace = true }
publish = { workspace = true }
repository = { workspace = true }
rust-version = { workspace = true }

[dependencies]
anyhow = { workspace = true }
arx-api = { workspace = true }
arx-api-types = { workspace = true }
arx-bitvec = { workspace = true }
arx-config = { workspace = true }
arx-logger = { workspace = true }
arx-mempool = { workspace = true }
arx-metrics-core = { workspace = true }
arx-tokio-runtime = { workspace = true }
arx-storage-interface = { workspace = true }
arx-types = { workspace = true }
arx-vm = { workspace = true }
async-trait = { workspace = true }
bcs = { workspace = true }
bigdecimal = { workspace = true }
chrono = { workspace = true }
clap = { workspace = true }
diesel = { workspace = true }
diesel_migrations = { workspace = true }
field_count = { workspace = true }
futures = { workspace = true }
hex = { workspace = true }
once_cell = { workspace = true }
regex = { workspace = true }
reqwest = { workspace = true }
reqwest-middleware = { workspace = true }
reqwest-retry = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sha2 = { workspace = true }
tokio = { workspace = true }
url = { workspace = true }

[dev-dependencies]
arx-api-test-context = { workspace = true }
