[package]
name = "arx-rate-limiter"
description = "Token bucket rate limiter"
version = "0.1.0"

# Workspace inherited keys
authors = { workspace = true }
edition = { workspace = true }
homepage = { workspace = true }
license = { workspace = true }
publish = { workspace = true }
repository = { workspace = true }
rust-version = { workspace = true }

[dependencies]
arx-infallible = { workspace = true }
arx-logger = { workspace = true }
arx-metrics-core = { workspace = true }
futures = { workspace = true }
pin-project = { workspace = true }
tokio = { workspace = true }
tokio-util = { workspace = true }
