[package]
name = "arx-webserver"
description = "Arx warp based webserver API"
version = "0.1.0"

# Workspace inherited keys
authors = { workspace = true }
edition = { workspace = true }
homepage = { workspace = true }
license = { workspace = true }
publish = { workspace = true }
repository = { workspace = true }
rust-version = { workspace = true }

[dependencies]
anyhow = { workspace = true }
arx-api-types = { workspace = true }
arx-config = { workspace = true }
arx-logger = { workspace = true }
bcs = { workspace = true }
hyper = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
warp = { workspace = true }
