[package]
name = "arx-secure-net"
description = "Arx's Simple Network Substrate"
version = "0.1.0"

# Workspace inherited keys
authors = { workspace = true }
edition = { workspace = true }
homepage = { workspace = true }
license = { workspace = true }
publish = { workspace = true }
repository = { workspace = true }
rust-version = { workspace = true }

[dependencies]
arx-logger = { workspace = true }
arx-metrics-core = { workspace = true }
once_cell = { workspace = true }
serde = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
arx-config = { workspace = true }
