[package]
name = "arx-db-bootstrapper"
description = "Arx DB-Bootstrapper"
version = "0.1.0"

# Workspace inherited keys
authors = { workspace = true }
edition = { workspace = true }
homepage = { workspace = true }
license = { workspace = true }
publish = { workspace = true }
repository = { workspace = true }
rust-version = { workspace = true }

[dependencies]
anyhow = { workspace = true }
arx-config = { workspace = true }
arx-crypto = { workspace = true }
arx-db = { workspace = true }
arx-executor = { workspace = true }
arx-storage-interface = { workspace = true }
arx-temppath = { workspace = true }
arx-types = { workspace = true }
arx-vm = { workspace = true }
bcs = { workspace = true }
structopt = { workspace = true }
